# iitm-llm-puzzle-solver

./: .env.example  Dockerfile  LICENSE  README.md  agent.py  background_logger.py  implementation_plan.md  logger_config.py  main.py  mock_server.py  pyproject.toml  requirements.txt  run_live_test.py  set_github_user.sh  solver.py  task.md  test_logging.py  test_ocr.py  tools.py  verify.py  walkthrough.md
