[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.1.5",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.1.0",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pydub>=0.25.1",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
